--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,21 @@
-# This config was automatically generated from your source code
-# Stacks detected: deps:ruby:.
 version: 2.1
 orbs:
   ruby: circleci/ruby@2.0.1
 jobs:
   test-ruby:
-    # Install gems, run rspec tests
     docker:
       - image: cimg/ruby:3.3.0-node
+        environment:
+          BILINGO_DATABASE_URL: postgresql://postgres@localhost/bilingo_test
+
       - image: circleci/postgres:9.5-alpine
+        environment:
+          POSTGRES_USER: bilingo
+          POSTGRES_DB: bilingo_test
+
     environment:
       RAILS_ENV: test
+
     steps:
       - checkout
       - ruby/install-deps
@@ -24,11 +29,9 @@ jobs:
           name: rspec test
           command: bundle exec rspec
   deploy:
-    # This is an example deploy job, not actually used by the workflow
     docker:
       - image: cimg/base:stable
     steps:
-      # Replace this with steps to deploy to users
       - run:
           name: deploy
           command: '#e.g. ./deploy.sh'
