--- a/config/database.yml
+++ b/config/database.yml
@@ -58,6 +58,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  url: <%= ENV["BILINGO_DATABASE_URL"]
+  username: bilingo
   database: bilingo_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
@@ -82,6 +84,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV["BILINGO_DATABASE_URL"]
   database: bilingo_production
   username: bilingo
   password: <%= ENV["BILINGO_DATABASE_PASSWORD"] %>
