--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   ruby: circleci/ruby@2.0.1
+  coveralls: coveralls/coveralls@1.0.6
 jobs:
   test-ruby:
     docker:
@@ -28,6 +29,8 @@ jobs:
       - run:
           name: rspec test
           command: bundle exec rspec
+      - coveralls/upload:
+          path_to_lcov: ./coverage/lcov/project.lcov
   deploy:
     docker:
       - image: cimg/base:stable
