--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
       - coveralls/upload:
           path_to_lcov: ./coverage/lcov/project.lcov
   deploy:
+    #deploy
     docker:
       - image: cimg/base:stable
     steps:
