--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
 version: 2.1
 orbs:
   ruby: circleci/ruby@2.0.1
-  coveralls: coveralls/coveralls@2.2.1
 jobs:
   test-ruby:
     docker:
       - image: cimg/ruby:3.3.0-node
         environment:
           BILINGO_DATABASE_URL: postgresql://bilingo@localhost/bilingo_test
+          CC_TEST_REPORTER_ID: 786b11d501b270c4de0085b0a0eea59c3def497151c97c7ef1fc6268b497a800
 
       - image: circleci/postgres:9.5-alpine
         environment:
@@ -27,10 +27,18 @@ jobs:
           name: Database setup
           command: bundle exec rake db:test:prepare
       - run:
+          name: Setup Code Climate test-reporter
+          command: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
+      - run:
           name: rspec test
           command: bundle exec rspec
-      - coveralls/upload:
-          path_to_lcov: ./coverage/lcov/project.lcov
+      - run:
+          name: 'Upload coverage report'
+          command: |
+            ./cc-test-reporter format-coverage -t simplecov $CIRCLE_ARTIFACTS/coverage/.resultset.json
+            ./cc-test-reporter upload-coverage
   deploy:
     #deploy
     docker:
