--- a/config/database.yml
+++ b/config/database.yml
@@ -16,14 +16,15 @@ default: &default
   adapter: postgresql
   encoding: unicode
   host: localhost
+  url: <%= ENV["BILINGO_DATABASE_URL"] %>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: <%= ENV.fetch("DATABASE_USERNAME") { bilingo } %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD") { bilingo } %>
 
 development:
   <<: *default
+  username: <%= ENV.fetch("DATABASE_USERNAME") { 'bilingo' } %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") { 'bilingo' } %>
   database: bilingo_development
 
   # The specified database role being used to connect to PostgreSQL.
@@ -83,5 +84,4 @@ test:
 production:
   <<: *default
   database: bilingo_production
-  username: bilingo
   password: <%= ENV["BILINGO_DATABASE_PASSWORD"] %>
