update postgres version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           BILINGO_DATABASE_URL: postgresql://bilingo@localhost/bilingo_test
           CC_TEST_REPORTER_ID: 786b11d501b270c4de0085b0a0eea59c3def497151c97c7ef1fc6268b497a800
 
-      - image: cimg/postgres:16.2
+      - image: circleci/postgres:9.5-alpine
         environment:
           POSTGRES_USER: bilingo
           POSTGRES_DB: bilingo_test
@@ -63,7 +63,7 @@ jobs:
       - run:
           name: Build production image
           command: |
-            DATABASE_URL='postgres://default:BpjHMCxhL57E@ep-falling-field-a17vrl8g-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require'
+            BILINGO_DATABASE_URL='postgres://default:BpjHMCxhL57E@ep-falling-field-a17vrl8g-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require'
             REDIS_URL='rediss://default:AZ9rAAIncDEzZmRlMGY0YWUzMzE0MDMxODI5M2YwN2VhOGE3MDE2M3AxNDA4MTE@stunning-gull-40811.upstash.io:6379'
             RAILS_MASTER_KEY='6ced4a69ac51d9cde3c91d78a89d7c64'
             docker network create proxy
