--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
             docker login -u ${DOCKER_ACCOUNT} -p ${DOCKER_TOKEN}
             docker-compose -f docker-compose.prod.yml push
 
-  deploy:
+  deploy-bilingo-staging:
     docker:
       - image: cimg/base:stable
     steps:
@@ -98,6 +98,9 @@ workflows:
       - published-bilingo-staging-version:
           requires:
             - build-test-bilingo
+      - deploy-bilingo-staging:
+          requires:
+            - published-bilingo-staging-version
     # - deploy:
     #     requires:
     #       - test-ruby
