--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,6 +99,10 @@ jobs:
             ssh -o StrictHostKeyChecking=no -v root@mtech.id.vn -p 24700 "chmod +x ~/deploy.sh && ~/deploy.sh --service bilingo --service-path bilingo-app --mode init"
             scp -P 24700 -o StrictHostKeyChecking=no -v docker-compose.prod.yml root@mtech.id.vn:bilingo-app/bilingo
             ssh -o StrictHostKeyChecking=no -v root@mtech.id.vn -p 24700 "chmod +x ~/deploy.sh && ~/deploy.sh --service bilingo --service-path bilingo-app --mode deploy"
+            ssh -o StrictHostKeyChecking=no -v root@mtech.id.vn -p 24700 "echo BILINGO_DATABASE_URL=${DATABASE_URL} > bilingo-app/bilingo/.env"
+            ssh -o StrictHostKeyChecking=no -v root@mtech.id.vn -p 24700 "echo REDIS_URL=${REDIS_URL} >> bilingo-app/bilingo/.env"
+            ssh -o StrictHostKeyChecking=no -v root@mtech.id.vn -p 24700 "echo RAILS_MASTER_KEY=${RAILS_MASTER_KEY} >> bilingo-app/bilingo/.env"
+
 workflows:
   build-and-test:
     jobs:
