--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -21,6 +21,8 @@ services:
     container_name: bilingo
     ports:
       - 3001:3000
+    env_file:
+      - .env
     labels:
       - traefik.enable=true
       - traefik.docker.network=proxy
