apply approve test to continue deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,10 +111,15 @@ workflows:
     jobs:
       - build-test-bilingo:
           <<: *defaults
+      - hold:
+          <<: *defaults
+          type: approval
+          requires:
+            - build-test-bilingo
       - published-bilingo-staging-version:
           <<: *defaults
           requires:
-            - build-test-bilingo
+            - hold
       - deploy-bilingo-staging:
           <<: *defaults
           requires:
